# django-esteid

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  AUTHORS.md  AUTHORS.rst  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  proxy_session.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test_settings.py  tox.ini
.github/workflows/: deploy.yml  test.yml
esteid/: __init__.py  actions.py  base_service.py  compat.py  config.py  constants.py  context_processors.py  exceptions.py  generic.py  helpers.py  middleware.py  mixins.py  models.py  ocsp.py  response.py  session.py  settings.py  signature.py  tests.py  types.py  urls.py  util.py  validators.py  views.py
esteid-proxy/: Dockerfile  Makefile  README.md  esteid-proxy.py  pyproject.toml
esteid/authentication/: README.md  __init__.py  authenticator.py  types.py  views.py
esteid/authentication/tests/: test_authenticator.py
esteid/bdoc2/: README.md  container.py  exceptions.py  ocsp.py  signature_verifier.py  tsa.py  utils.py  xmlsig.py
esteid/bdoc2/templates/: manifest.xml  signature.xml
esteid/bdoc2/tests/: test_bdoc_container.py  test_signature_verifier.py  test_xml_signature.py
esteid/certs/: __init__.py  sk-ocsp-responder-certificates.pem
esteid/digidocservice/: containers.py  czip.py  models.py  service.py  test.py  types.py  util.py
esteid/digidocservice/test_data/: test.bdoc
esteid/flowtest/: README.md  signer.py  urls.py  views.py
esteid/flowtest/tests/: test_authentication_flow.py  test_signing_flow.py
esteid/idcard/: README.md  __init__.py  authenticator.py  signer.py  test_idcardsigner.py  types.py  views.py
esteid/idcard/templates/: iframe-error.html  iframe.html
esteid/idcard/tests/: test_idcard_auth_view.py  test_idcardsigner.py
esteid/mobileid/: README.md  __init__.py  authenticator.py  base.py  constants.py  exceptions.py  i18n.py  signer.py  types.py  utils.py
esteid/mobileid/tests/: conftest.py  test_authentication.py  test_base.py  test_mobileidsigner.py  test_signing.py  test_types.py  test_utils.py
esteid/signing/: README.md  __init__.py  exceptions.py  signer.py  types.py  views.py
esteid/signing/tests/: test_signer.py  test_types.py  test_views.py
esteid/smartid/: README.md  __init__.py  apps.py  authenticator.py  base.py  conftest.py  constants.py  crypto.py  exceptions.py  i18n.py  signer.py  tests.py  types.py  utils.py
esteid/smartid/tests/: conftest.py  test_auth_and_sign_flow.py  test_base.py  test_status.py  test_verification_code.py  tests.py
esteid/tests/: conftest.py  test_actions.py  test_base_service.py  test_common_name.py  test_context_processors.py  test_languages.py  test_service_models.py  test_settings.py  test_translations.py  test_types.py  test_utils.py
idcard_auth_test/: Dockerfile-django  README.md  docker-compose.yml
idcard_auth_test/etc.nginx/: nginx.conf
tests/: common_name.py  conftest.py  distinguished_name.py  generic.py  mobile_authenticate.py  mobile_sign.py  signature.py  test_service_models.py  tests.py
(+21 files in other folders)
