[tool.poetry]
name = "django-esteid"
version = "4.1"
description = "Django-esteid is a package that provides Esteid based authentication for your Django applications."
readme = "README.md"
license = "BSD"
authors = [
    "Thorgate <info@thorgate.eu>",
    "Jürno Ader <jyrno@thorgate.eu>",
    "Yuri Shatrov <yuriy@thorgate.eu>",
]
maintainers = [
    "Jyrno Ader <jyrno42@gmail.com>",
    "Jorgen Ader <jorgen.ader@gmail.com>",
]
repository = "https://github.com/thorgate/django-esteid"
homepage = "https://github.com/thorgate/django-esteid"
keywords=[
    "esteid",
    "django",
    "smartid",
    "mobile-id",
    "idcard",
    "asice"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "esteid" },
]
include = [
    "pyasice/templates/*.xml",
    "AUTHORS.md",
    "LICENSE",
    "README.md",
    "requirements-base.txt",
    "requirements.txt",
    "esteid/**/*.html",
    "esteid/**/*.xml",
    "esteid/**/*.png",
    "esteid/**/*.gif",
    "esteid/**/*.js",
    "esteid/**/*.css",
    "esteid/**/*.jpg",
    "esteid/**/*.jpeg",
    "esteid/**/*.svg",
    "esteid/**/*.pem",
    "esteid/**/*.po",
    "esteid/**/*.mo",

]
exclude = [
    "esteid/__pycache__",
    "esteid/tests",
    "esteid/**/tests",
]

[tool.poetry.dependencies]
python = "^3.8.0"

Django = ">=1.11,!=2.1.0,!=2.1.1"
attrs = ">=19.2.0"
esteid-certificates = "==1.0.*"
pyasice = ">=1.2.0"
requests = ">=2.20"
pytz = ">=2018"

"backports.zoneinfo" = {version = "0.2.1", python = "<3.9"}

[tool.poetry.dev-dependencies]

djangorestframework = ">=3.9"
django-sslserver = "*"
black = "==24.3.0"
coverage = ">=4.5.4"
coveralls = ">=1.8.2"
flake8 = "*"
isort = "==5.12.*"
pylint = "==2.16.*"
pyopenssl = ">=18.0.0"
pytest-cov = ">=2.8.1"
pytest-django = ">=3.5.1"
pytest = ">=4.6.5"
requests-mock = "*"
tox = ">=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | local.py
  | local_test.py
)
'''
