[tool.poetry]
name = "misc"
version = "0.1.0"
description = ""
authors = ["Jyrno Ader <jyrno@thorgate.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["standard"], version = "^0.115.6"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
